--- a/static/hub.html
+++ b/static/hub.html
@@ -2,6 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <body>
         <div id="root"></div>
-        <script type="text/javascript" src="../dist/js/hub.js"></script>
+        <script type="text/javascript" src="../dist/js/hub.js" charset="utf-8"></script>
     </body>
 </html>
