--- a/src/Pages/Panel/panel.html
+++ b/src/Pages/Panel/panel.html
@@ -2,6 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <body>
         <div id="root"></div>
-        <script type="text/javascript" src="panel.js" charset="utf-8"></script>
+        <script type="text/javascript" src="Panel.js" charset="utf-8"></script>
     </body>
 </html>
